I HATE GRADLE